work on grid searches, lots small performance tweaks, fix bug in handling two stations in same group